# deadly-stages-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
res/level/devtest/: map.tmx  tileset.tsx
res/level/future/: map.tmx  tileset.tsx
res/level/hell/: map.tmx  tileset.tsx
res/level/openfield/: map.tmx
src/: Game.cpp  Game.hpp  game.cpp  game.hpp
src/Adapter/: HighScoresAdapter.cpp  HighScoresAdapter.hpp  HighScoresModel.hpp  OptionsAdapter.cpp  OptionsAdapter.hpp  OptionsModel.hpp
src/BloodParticle/: BloodParticle.cpp  BloodParticle.hpp  BloodParticleManager.cpp  BloodParticleManager.hpp
src/BloodPoolManager/: BloodPoolManager.cpp  BloodPoolManager.hpp
src/Control/: Control.cpp  Control.hpp
src/Controls/: Controls.cpp  Controls.hpp
src/Core/: AudioManager.cpp  AudioManager.hpp  CollisionManager.cpp  CollisionManager.hpp  Config.hpp  Constants.hpp  Debouncer.hpp  DefaultOptions.hpp  Drawable.hpp  FloatAnimator.cpp  FloatAnimator.hpp  FontManager.cpp  FontManager.hpp  FramerateIndicator.cpp  FramerateIndicator.hpp  ImageAsset.cpp  ImageAsset.hpp  Line.hpp  Macros.hpp  MathUtils.cpp  MathUtils.hpp  Options.hpp  PrimitiveShapeHelper.cpp  PrimitiveShapeHelper.hpp  SDLUtils.cpp  SDLUtils.hpp  TexturePool.cpp  TexturePool.hpp  Vector2D.h  Vector2D.hpp  VectorUtils.hpp  XMLSerializer.cpp  XMLSerializer.hpp
src/Debug/: Logger.cpp  Logger.hpp
src/Drawable/: BooleanOptionItemDrawable.cpp  BooleanOptionItemDrawable.hpp  ClickableOptionItemDrawable.cpp  ClickableOptionItemDrawable.hpp  Drawable.cpp  Drawable.hpp  ImageDrawable.cpp  ImageDrawable.hpp  MenuDrawable.cpp  MenuDrawable.hpp  MenuItemDrawable.cpp  MenuItemDrawable.hpp  OptionItemDrawable.cpp  OptionItemDrawable.hpp  PredefinedOptionItemDrawable.cpp  PredefinedOptionItemDrawable.hpp  SliderOptionItemDrawable.cpp  SliderOptionItemDrawable.hpp  TextDrawable.cpp  TextDrawable.hpp
src/GameEntity/: BloodParticle.cpp  BloodParticle.hpp  BloodParticleManager.cpp  BloodParticleManager.hpp  BloodPool.cpp  BloodPool.hpp  Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  GameEntity.cpp  GameEntity.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Weapon.cpp  Weapon.hpp
src/Layout/: Layout.cpp  Layout.hpp
src/Level/: Camera.cpp  Camera.hpp  Level.cpp  Level.hpp  LevelParser.cpp  LevelParser.hpp  Tile.cpp  Tile.hpp  TileLayer.cpp  TileLayer.hpp
src/Platform/: parse-build-type.sh  pre-run.sh
src/Platform/Common/: SaveDataHelper.cpp  SaveDataHelper.hpp
src/Platform/Common/scripts/: copy-res-platform-group-computer.sh  pre-run.sh
src/Platform/Linux/: CMakeLists.txt  Makefile  main.cpp
src/Platform/Linux/scripts/: clean-debug.sh  clean.sh  compile-debug.sh  compile.sh  copy-res-debug.sh  copy-res.sh  setup-env-debug.sh
src/Platform/PSP/: CMakeLists.txt  GuWrapper.cpp  GuWrapper.hpp  SaveDataHelper.cpp  SaveDataHelper.hpp  icon0.hpp  main.cpp  pic1.hpp
src/Platform/PSP/scripts/: clean-debug.sh  clean-release.sh  clean.sh  compile-debug.sh  compile-release.sh  compile.sh  copy-res-debug.sh  copy-res-release.sh  copy-res.sh  launch-psplink-debug.sh  parse-build-type.sh  pre-run.sh  setup-env-debug.sh
src/Platform/Windows/: generate-ico.sh  icon_32.rc  icon_32.res  main.cpp
src/Platform/Windows/scripts/: clean.sh  compile.sh  copy-res.sh
src/Platform/macOS/: Deadly Stages Remix.icns  Info.plist  Makefile  generate-icns.sh  main.cpp
src/Platform/macOS/scripts/: clean-debug.sh  clean.sh  compile-debug.sh  compile.sh  copy-res-debug.sh  copy-res.sh  setup-env-debug.sh
src/Screen/: Screen.cpp  Screen.hpp
src/Screen/Controls/: ControlsScreen.cpp  ControlsScreen.hpp
src/Screen/Credits/: CreditsScreen.cpp  CreditsScreen.hpp
src/Screen/Game/: GameScreen.cpp  GameScreen.hpp  Hud.cpp  Hud.hpp  HudHealthBar.cpp  HudHealthBar.hpp  PauseOverlay.cpp  PauseOverlay.hpp
src/Screen/GameOver/: GameOverScreen.cpp  GameOverScreen.hpp
src/Screen/LevelSelect/: LevelPreview.cpp  LevelPreview.hpp  LevelSelectScreen.cpp  LevelSelectScreen.hpp
src/Screen/MainMenu/: MainMenuScreen.cpp  MainMenuScreen.hpp
src/Screen/Options/: DefaultOptions.hpp  OptionsScreen.cpp  OptionsScreen.hpp
src/Screen/PermanentOverlay/: PermanentOverlayScreen.cpp  PermanentOverlayScreen.hpp
src/ScreenManager/: ScreenManager.cpp  ScreenManager.hpp
src/platform/psp/: CMakeLists.txt  main.cpp
src/screen/: screen.cpp  screen.hpp
src/screen/main_menu/: main_menu_screen.cpp  main_menu_screen.hpp
